--- a/main.html
+++ b/main.html
@@ -11,6 +11,19 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<ol>
+		<li data-ns-test="shoppingList">Watch</li>
+		<li data-ns-test="shoppingList">Perfume</li>
+		<li data-ns-test="shoppingList">mobile</li>
+	</ol>
+
+	<ul>
+		<li data-ns-test="holidayList">Araku</li>
+		<li data-ns-test="holidayList">manali</li>
+		<li data-ns-test="holidayList">goa</li>
+
+	</ul>
+
 </body>
 
 </html>
